--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Mohammad AlSaleh <CE.Mohammad.AlSaleh@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-serde_json = "1"
-unescape = "0.1"
+serde_json = "^1.0.107"
+unescape = "^0.1.0"
